# castle-query

./: .flake8  .gitignore  .pre-commit-config.yaml  QUERY_USAGE.md  README.md  pyproject.toml  startup.sh
src/: get_gmail.py  query_qdrant.py
